# waste-it-bot

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml
src/: main.rs
