[package]
name = "waste-it-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
dptree = "0.5.1"
env_logger = "0.11.11"
log = { version = "0.4.33", features = ["std"] }
reqwest = "0.13.4"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
